--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,4 @@
+
 <!--
     Menu to Select 'Current Notes Space'
 
@@ -12,34 +13,54 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Note-taking app with saved pages" />
-  <title>Saved Notes &ndash; My Note Taking App</title>
+  <title>In-Progress Notes &ndash; My Note Taking App</title>
   <link rel="stylesheet" href="menu-styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- from https://cdnjs.com/libraries/font-awesome?form=MG0AV3 -->
   <script src="menu.js" defer></script>
 </head>
 
 <body>
-    <div class="header">
-      <a href="#">My Note Taking App</a>
+
+  <!-- Header -->
+  <div class="header">
+      <h1>My Note Taking App</h1>
       <ul>
-        <li><a href="../">Draw</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="../"><span>Draw</span></a></li>
+        <li><a href="#"><span>About</span></a></li>
       </ul>
-    </div>
+  </div>
+  <!-- Notes Header -->
+  <div class="notes-header">
+    <h2>In-Progess Notes</h2>
+    <p>Make sure to save Local Notes to Database!</p>
+  </div>
+
+  <!-- Save/Load IndexedDB Button -->
+  <div class="indexedDB-buttons">
+  <button id="saveButton"><i class="fas fa-save"></i></button>
+  <button id="retrieveButton"><i class="fas fa-database"></i></button>
+  </div> 
+
+  <!-- Change Notes View Buttons -->
+  <div class="view-buttons">
+  <button id="regularViewButton"><i class="fas fa-sticky-note"></i></button>
+  <button id="gridViewButton"><i class="fas fa-th"></i></button>
+  <button id="listViewButton"><i class="fas fa-bars"></i></button>
+  </div>
+  <!-- Notes Container -->
+  <div class="notes-container">
+    <ul class="saved-notes-list list-view" id="notesListType"></ul>
+    <!-- Dynamically generated notes will appear here -->
+  </div>
 
 
-    <div class="notes-header">
-      <h1>Saved Notes</h1>
-    </div>
-  
-    <div class="notes-container">
-      <ul class="saved-notes-list"></ul>
-      <!-- Dynamically generated notes will appear here -->
-    </div>
 
   <!-- Footer Section -->
   <div class="footer">
-    <h3>A nice and clean notes app.</h3>
+  <h3>A nice and clean notes app.</h3>
   </div>
+
 </body>
+
 
 </html>
