Fixed sending to backend and processing prediction. Added text feature. Cleaned up code, added some hover stylings.

--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <!--
     Menu to Select 'Current Notes Space'
 
-    Stylesheet: menu-styles.css
+    Stylesheet: menu_styles.css
     Uses: menu.js
 -->
 
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Note-taking app with saved pages" />
   <title>In-Progress Notes &ndash; My Note Taking App</title>
-  <link rel="stylesheet" href="menu-styles.css" />
+  <link rel="stylesheet" href="menu_styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- from https://cdnjs.com/libraries/font-awesome?form=MG0AV3 -->
   <script src="menu.js" defer></script>
 </head>
