--- a/canvas.html
+++ b/canvas.html
@@ -2,8 +2,8 @@
 <!--
     Current Notes Space
 
-    Stylesheet: canvas-styles.css
-    Uses: canvas-script.js
+    Stylesheet: canvas_styles.css
+    Uses: canvas_script.js
 
 -->
 
@@ -15,9 +15,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notebook App</title>
-    <link rel="stylesheet" href="canvas-styles.css">
+    <link rel="stylesheet" href="canvas_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- from https://cdnjs.com/libraries/font-awesome?form=MG0AV3 -->
-    <script src="canvas-script.js" defer></script>
+    <script src="canvas_script.js" defer></script>
 </head>
 
 <body>
@@ -29,15 +29,16 @@
     </div>
 
 
+
     <!-- Save and Load Buttons ( To save drawings )-->
     <nav class="save-buttons">
         <button id="saveButton"><i class="fas fa-save"></i></button>
         <button id="loadButton"><i class="fas fa-folder-open"></i></button>
     </nav>
 
-    <!-- Save and Load Buttons ( To save drawings )-->
-    <nav class="math-button">
-        <button id="mathButton"><i class="fas fa-calculator"></i></button>
+    <!-- Get Prediction From Drawing -->
+    <nav class="prediction-button">
+        <button id="predictionButton"><i class="fas fa-brain"></i></button>
     </nav>
 
 
@@ -47,7 +48,7 @@
     </nav>
 
 
-    <!-- Toolbar ( Pen, Highligher, Clear )-->
+    <!-- Toolbar ( Pen, Highligher, Eraser, Color-Picker, Text, Clear ) -->
     <div class="toolbar">
         <button id="penButton" class="tool-button active"><i class="fas fa-pen"></i></button>
         <button id="highlighterButton" class="tool-button"><i class="fas fa-highlighter"></i></button>
@@ -55,6 +56,7 @@
         <div class="colorPicker">
             <input type="color" id="colorPicker">
         </div>
+        <button id="textButton"><i class="fas fa-italic"></i></button>
         <button id="clearButton"><i class="fas fa-trash"></i></button>
     </div>
     
